small title update

--- a/Firstupload.html
+++ b/Firstupload.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <h1>CODING IS CRAZY... FUN! </h1>
+    <h1>ARE YOU SURE YOU WANT TO CODE?! </h1>
 
     <!-- I am a html comment example-->
   <meta charset="utf-8">
   <title> RiCk N MOrty</title>
 </head>
 <body>
-    <img src="ricknmorty.gif">
+    <img src="rick.gif">
 
     <strong><p>A shout out to Mr. David Johnson the richest man in town!!!!</p></strong
     <u1>
